--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@supabase/supabase-js": "^2.51.0",
+    "buffer": "^6.0.3",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-google-mobile-ads": "^15.4.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "structured-clone": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
