--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.1",
-    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.21",
-    "@supabase/supabase-js": "^2.51.0",
+    "@supabase/supabase-js": "^2.54.0",
     "buffer": "^6.0.3",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-google-mobile-ads": "^15.4.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.5.2",
